2005-03-03  Nick Clifton  <nickc@redhat.com>

	* config/tc-mn10200.c (tc_gen_reloc): Handle the case where the
	reloc is the difference of two symbols defined in the same
	section.

	* config/tc-iq2000.c (line_comment_chars): Include the # character
	as otherwise this breaks #APP/#NO_APP processing.

2005-03-03  Ramana Radhakrishnan  <ramana.radhakrishnan@codito.com>

	* config/tc-arc.c(md_assemble): Remove dead code for handling
	immediate indexing of ld and st .

2005-03-02  Daniel Jacobowitz  <dan@codesourcery.com>
	    Joseph Myers  <joseph@codesourcery.com>

	* config/tc-mips.c (percent_op): Add %tlsgd, %tlsldm, %dtprel_hi,
	%dtprel_lo, %tprel_hi, %tprel_lo, and %gottprel.
	(parse_relocation): Check for a word break after a relocation
	operator.
	(md_apply_fix3): Handle TLS relocations, and mark thread-local
	symbols.

2005-03-02  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (ppc_fix_adjustable <ELF>): Remove bogus checks.

2005-03-02  Jan Beulich  <jbeulich@novell.com>

	* as.c (main): Use unlink_if_ordinary instead of unlink.
	* messages.c (as_fatal): Likewise.

2005-03-02  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (build_modrm_byte): Add lock prefix for cr8...15
	accesses.
	(parse_register): Allow cr8...15 in all modes.

2005-03-02  Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (intel_e11): If not followed by T_PTR, treat T_BYTE
	etc. like normal symbol references (T_ID).

2005-03-02  Alan Modra  <amodra@bigpond.net.au>

	* symbols.c (fb_label_name): Fix silly thinko in last change.

2005-03-02  Alan Modra  <amodra@bigpond.net.au>

	* expr.c (integer_constant): Remove TARGET_WORD_SIZE hack.
	* config/tc-m68k.h (TARGET_WORD_SIZE): Delete.

	* symbols.c (fb_label_name): Allow an augend of 2 for mmix.

2005-03-01  Ramana Radhakrishnan  <ramana.radhakrishnan@codito.com>

	PR gas/708
	* config/tc-arc.c (md_assemble): Initialize suffix for extension
	suffixes also.

2005-03-01  Alan Modra  <amodra@bigpond.net.au>
